# housing-nutrition-label

./: .dockerignore  .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  clean_parcels.py  enrich_energy.py  enrich_fema_flood.py  enrich_health.py  enrich_infrastructure.py  enrich_noaa_climate.py  enrich_seismic.py  enrich_socioeconomic.py  enrich_tornado.py  enrich_walkscore.py  icf-brm-research.md  pyproject.toml  release-please-config.json  render.yaml  requirements.txt  run_pipeline.py  score_all_dimensions.py  score_resilience.py  scoring-research.md  setup.py  shelby_ingest.py  simulate_house.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  pr-title.yml  release-please.yml
docs/: CNAME  CODE_AUDIT.md  addr-suggest.js  back-to-top.js  examples.html  index.html  label-core.css  label-core.js  label-form.js  label.html  methodology.html  nav.js  reference.html  setup.html  style.css  styles.css
docs/data/: sample-parcels.json
research/: climate-projections-research.md  data-exploration-report.md  data-source-strengthening-research.md  dense-housing-research.md  embodied-carbon-footprint-research.md  embodied-carbon-geometry-research.md  embodied-carbon-research.md  environmental-footprint-research.md  feature-modifiers-research.md  infrastructure-burden-research.md  lifetime-cost-research.md  seismic-hazard-research.md  tornado-hazard-research.md  uncertainty-confidence-research.md
scripts/: __init__.py  build_air_quality.py  build_cambium_crosswalk.py  build_climate_projections.py  build_climate_zones.py  build_egrid_crosswalk.py  build_govfinance.py  build_health_ref.py  build_home_value.py  build_noise.py  build_nri_tornado.py  build_nri_wildfire.py  build_property_tax.py  build_rent.py  build_resstock_eui.py  build_seismic_grid.py  build_socio_ref.py  build_solar.py  build_utility_rates.py  build_walkability.py  build_water.py  calibrate_construction_percentiles.py  calibrate_infra_breakpoints.py  generate_label_data.py  run_pipeline.py  sync_docs.py  sync_readme.py
src/housing_label/: __init__.py  api.py  confidence.py  config.py  utils.py
src/housing_label/data/: __init__.py  _tractstore.py  _util.py  air_quality.csv  air_quality.py  cambium.py  cambium_lrmer.csv  climate.py  climate_projections.csv  climate_projections.py  climate_zones.csv  construction_percentiles.csv  egrid.py  egrid_subregions.csv  embodied_carbon.py  govfinance.py  govfinance_county.csv  health.py  health_county.csv  home_value.py  multifamily_value.py  national_percentile.py  noise.py  noise_county.csv  nri_tornado.csv  nri_wildfire.csv  property_tax_county.csv  propertytax.py  rent_county.csv  resstock_eui.csv  resstock_eui.py  resstock_factors.csv  socio_county.csv  socioeconomic.py  solar.py  solar_yield_county.csv  tornado.py  utility_rates.py  walkability.py  walkability_county.csv  (+3 more)
src/housing_label/enrich/: __init__.py  durability.py  energy.py  environmental.py  fema_flood.py  fire.py  footprint.py  health.py  infrastructure.py  noaa_climate.py  region_context.py  seismic.py  seismic_lookup.py  socioeconomic.py  structure.py  tornado.py  walkscore.py
src/housing_label/ingest/: __init__.py  clean.py  shelby_parcels.py
src/housing_label/score/: __init__.py  all_dimensions.py  resilience.py
src/housing_label/simulate/: __init__.py  dimensions.py  house.py  location.py
tests/: test_air_quality.py  test_all_dimensions.py  test_api.py  test_autofill.py  test_build_loca2.py  test_cambium.py  test_climate_projections.py  test_confidence.py  test_density.py  test_dimensions.py  test_durability.py  test_embodied_carbon.py  test_environmental.py  test_footprint.py  test_generate_label_data.py  test_golden_label.py  test_govfinance.py  test_health.py  test_health_national.py  test_home_value.py  test_infra_breakpoints.py  test_infrastructure.py  test_label_payload.py  test_location.py  test_multifamily_value.py  test_national_percentile.py  test_noise.py  test_propertytax.py  test_residential_screen.py  test_resilience_brm.py  test_resilience_vectorized.py  test_resstock_eui.py  test_socio_national.py  test_socioeconomic.py  test_solar.py  test_structure.py  test_sync_docs.py  test_sync_readme.py  test_tier3_enrich.py  test_tornado.py  (+5 more)
tests/golden/: label_snapshot.json
