[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "housing-nutrition-label"
version = "0.1.8"
description = "Multi-dimensional lifecycle scoring for residential properties"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32,<3",
    "pandas>=2.2,<3",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
# Build-only: reading the USGS CMIP6-LOCA2 NetCDF grids to (re)generate the
# climate crosswalks (scripts/build_climate_projections.py --source loca2).
# Never imported at runtime — the bundled CSVs keep the runtime deps minimal.
build = ["xarray>=2024.1", "netCDF4>=1.6", "numpy>=1.26", "requests>=2.32"]

[project.scripts]
housing-simulate = "housing_label.simulate.house:main"
housing-pipeline = "scripts.run_pipeline:main"
housing-api = "housing_label.api:serve"

[tool.setuptools]
package-dir = { "" = "src", "scripts" = "scripts" }
packages = [
    "housing_label",
    "housing_label.ingest",
    "housing_label.enrich",
    "housing_label.score",
    "housing_label.simulate",
    "housing_label.data",
    "scripts",
]

[tool.setuptools.package-data]
"housing_label.data" = ["*.csv", "*.csv.gz"]
