[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "housing-nutrition-label"
version = "0.1.59"
description = "Multi-dimensional lifecycle scoring for residential properties"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32,<3",
    "pandas>=2.2,<3",
]

[project.optional-dependencies]
# slowapi adds the per-IP rate limiter that protects the keyed/free upstreams
# the scoring endpoints proxy (see housing_label.api).
api = ["fastapi>=0.110", "uvicorn>=0.29", "slowapi>=0.1.9"]
# Build-only: reading the USGS CMIP6-LOCA2 NetCDF grids to (re)generate the
# climate crosswalks (scripts/build_climate_projections.py --source loca2) and the
# .xlsx workbooks a few builders parse (openpyxl — EPA radon zones, Cambium, EIA
# utility rates). Never imported at runtime — the bundled CSVs keep the runtime
# deps minimal.
build = ["xarray>=2024.1", "netCDF4>=1.6", "numpy>=1.26", "requests>=2.32", "openpyxl>=3.1"]
# Test + lint toolchain (CI installs `.[api,dev]` so the FastAPI-guarded tests
# run rather than self-skip). httpx2 (Pydantic's maintained continuation of
# httpx) backs Starlette 1.3+'s TestClient.
dev = ["pytest>=8", "ruff>=0.5", "httpx2>=2.5"]

[project.scripts]
housing-simulate = "housing_label.simulate.house:main"
housing-api = "housing_label.api:serve"

[tool.setuptools]
package-dir = { "" = "src", "scripts" = "scripts" }
packages = [
    "housing_label",
    "housing_label.enrich",
    "housing_label.score",
    "housing_label.simulate",
    "housing_label.data",
    "scripts",
]

[tool.setuptools.package-data]
"housing_label.data" = ["*.csv", "*.csv.gz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Each test file also keeps its own `_run_all()` runner so a stage stays runnable
# as a plain script (`python tests/test_x.py`); pytest just collects them all.

[tool.ruff.lint]
# Scoped deliberately narrow: the codebase leans on compact one-line idioms
# (`if x: return y`, grouped `import a, b, c`) that the default pycodestyle E7/E4
# rules flag by the dozen but are intentional here. So we select only pyflakes
# (F) — real defects: unused imports/variables, undefined names — plus syntax
# errors (E9), and ignore F541 (f-strings with no placeholder, harmless). This
# keeps the lint gate meaningful (it catches dead code and typos) without a
# whitespace-churn rewrite. Widen the rule set later if desired.
select = ["E9", "F"]
ignore = ["F541"]
